Refactoring on going
